    (Closes: #581673)
  * [INTL:fr] French program output translation (Closes: #582059)
  * Add support for omitdebsrc and change suite behaviour to be non-
    default, usable by selecting explicitsuite to true.
  * When moving downloaded packages to a sourcedir, also download the
    source packages for GPL compliance.
  * Handle fakeroot with native architectures.

 -- Neil Williams <codehelp@debian.org>  Fri, 28 May 2010 22:07:18 +0100

multistrap (2.1.4) unstable; urgency=low

  * Add support for configurable single cross-toolchains in
    the chroot - using the dpkg-cross default_arch, if any.
  * Clarify documentation of bootstrap and aptsources sections
    (Closes: #579626)
  * Clarify error reporting in the --simulate option, warn if
    sections are not defined. (Closes: #579627)
  * [INTL:vi] Vietnamese program translation update (Closes: #580623)
  * Report parsing errors in config files (Closes: #580687)
  * Move from experimental into unstable. 

 -- Neil Williams <codehelp@debian.org>  Sat, 08 May 2010 11:38:58 +0100

multistrap (2.1.3) experimental; urgency=low

  * Fix armel.conf to specify the right sources.

 -- Neil Williams <codehelp@debian.org>  Sun, 25 Apr 2010 09:35:28 +0100

multistrap (2.1.2) experimental; urgency=low

  * Add support to avoid running preinst scripts and
     always ignore the bash preinst which does not respect
     DEBIAN_FRONTEND=noninteractive 
  * fix handling of omitrequired and configsh when empty
  * add force-yes when using noauth
  * split the package list even if using only spaces, not commas
  * Add support for compressing the filesystem into a tarball.
  * Add support for reinstalling packages known to fail due to preinst
    problems.
  * Add a simple C file to test the compiler inside the chroot
  * sort duplicate sources list entries and use dedicated sources list
    files

 -- Neil Williams <codehelp@debian.org>  Wed, 21 Apr 2010 15:23:23 +0100

multistrap (2.1.1) experimental; urgency=low
