@@ -11,6 +11,7 @@ Copyright:   Copyright 2006-2010 Neil Williams <codehelp@debian.org>
              Copyright 2008 Hands.com Ltd <phil@hands.com>
              Copyright 2006-2007 Wookey <wookey@debian.org>
              Copyright 2001-2006 Junichi Uekawa <dancer@netfort.gr.jp>
+             Copyright 2001-2002 Erik Andersen <andersen@codepoet.org>
 
 License:
 
