@@ -12,8 +12,10 @@ multistrap (2.1.5) unstable; urgency=low
   * When moving downloaded packages to a sourcedir, also download the
     source packages for GPL compliance.
   * Handle fakeroot with native architectures.
+  * Extend device table format to support creating symlinks and
+    hardlinks.
 
- -- Neil Williams <codehelp@debian.org>  Fri, 28 May 2010 22:07:18 +0100
+ -- Neil Williams <codehelp@debian.org>  Mon, 31 May 2010 18:15:06 +0100
 
 multistrap (2.1.4) unstable; urgency=low
 
